# win-service

./: LICENSE  README.md  genbuild.cmd
src/: CMakeLists.txt  main.cpp  parse_ini.cpp  parse_ini.h  win_service.cpp  win_service.h  win_service.ini
